--- a/setup-mpc-web/.env.prod
+++ b/setup-mpc-web/.env.prod
@@ -1,5 +1,6 @@
-# just a flag
+# production environment
 NODE_ENV = 'production'
 VUE_APP_ENV = 'production'
 # base api
 VUE_APP_BASE_API = ''
+VUE_APP_SCANURL= 'https://scan.alaya.network/trade-detail?txHash='
