--- a/setup-mpc-web/.env.sit
+++ b/setup-mpc-web/.env.sit
@@ -1,5 +1,6 @@
-# just a flag
-NODE_ENV = 'sit'
+# test environment
+NODE_ENV = 'production'
 VUE_APP_ENV = 'sit'
 # base api
 VUE_APP_BASE_API = ''
+VUE_APP_SCANURL= 'https://devnetscan.alaya.network/trade-detail?txHash='
