--- a/setup-mpc-common/package.json
+++ b/setup-mpc-common/package.json
@@ -30,7 +30,7 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
     "progress-stream": "^2.0.0",
-    "@fksyuan/web3x": "^4.0.3"
+    "@alayanetwork/web3x": "^4.0.3"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.35",
