--- a/setup-mpc-web/package.json
+++ b/setup-mpc-web/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "mpc-setup-web",
+  "name": "lumino",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve --mode=dev",
+    "build:sit": "vue-cli-service build --mode=sit",
+    "build:prod": "vue-cli-service build --mode=prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
